# rs-claude-statusline

./: .justfile  Cargo.toml  readme.adoc
.run/: Run statusline.run.xml  Test statusline.run.xml
src/: lib.rs  widgets.rs
tests/: claude1.json  claude2.json  lmstudio.modes.json
