[package]
name = "claude-statusline"
version = "0.1.0"
description = "Status line for Claude Code"
repository = "https://github.com/mcsakoff/rs-claude-statusline"
authors = ["Alexey McSakoff <mcsakoff@gmail.com>"]
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
colorz = { version = "1.1", features = ["std", "supports-color"] }
env_logger = "0.11"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
